force-app/main/default/objects/Donation__c/fields/Donation_Frequncy__c.field-meta.xml
<CustomField>
    <fullName>Donation_Frequncy__c</fullName>
    <label>Donation Frequncy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recurring</fullName>
            </value>
            <value>
                <fullName>One Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>