force-app/main/default/objects/Donation__c/fields/External_Donation_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Donation_Id__c</fullName>
    <formula>IF(
   ISPICKVAL(Donor__r.Account.Account_code__c, &#39;IK&#39;),
  (&#39;IK&#39;&amp;&#39;_&#39;&amp;TEXT(MONTH( DATEVALUE(Donor__r.CreatedDate) ))&amp;&#39;_&#39;&amp;TEXT(YEAR( DATEVALUE(Donor__r.CreatedDate) ))&amp;&#39;_&#39;&amp;Donor__r.UUID__c&amp;&#39;_&#39;&amp;Name),  
  (&#39;GQ&#39;&amp;&#39;_&#39;&amp;TEXT(MONTH( DATEVALUE(Donor__r.CreatedDate) ))&amp;&#39;_&#39;&amp;TEXT(YEAR( DATEVALUE(Donor__r.CreatedDate) ))&amp;&#39;_&#39;&amp;Donor__r.UUID__c&amp;&#39;_&#39;&amp;Name)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Donation Id</label>
    <type>Text</type>
</CustomField>