force-app/main/default/objects/Donation__c/fields/IsReceiptSent__c.field-meta.xml
<CustomField>
    <fullName>IsReceiptSent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Receipt Sent to Donor?</description>
    <label>IsReceiptSent</label>
    <type>Checkbox</type>
</CustomField>