force-app/main/default/objects/Donation__c/fields/Mandate_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Mandate_End_Date__c</fullName>
    <label>Mandate End Date</label>
    <type>Date</type>
</CustomField>