force-app/main/default/objects/Donation__c/fields/Mandate_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Mandate_Start_Date__c</fullName>
    <label>Mandate Start Date</label>
    <type>Date</type>
</CustomField>