force-app/main/default/objects/Donation__c/fields/Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Payment_Mode__c</fullName>
    <label>Payment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>POS Machine</fullName>
            </value>
            <value>
                <fullName>UPI</fullName>
            </value>
            <value>
                <fullName>QR Code</fullName>
            </value>
            <value>
                <fullName>Account Transfer</fullName>
            </value>
            <value>
                <fullName>Razor Pay</fullName>
            </value>
            <value>
                <fullName>Payu</fullName>
            </value>
            <value>
                <fullName>CamsPay</fullName>
            </value>
            <value>
                <fullName>NuPay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>