force-app/main/default/objects/Donation__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Corpus</fullName>
                <color>#FF6666</color>
                <label>Corpus</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>