force-app/main/default/objects/Donation__c/fields/ReceiptSentDateTime__c.field-meta.xml
<CustomField>
    <fullName>ReceiptSentDateTime__c</fullName>
    <description>The time of last receipt sent</description>
    <label>ReceiptSentDateTime</label>
    <type>DateTime</type>
</CustomField>