force-app/main/default/objects/Donation__c/fields/Recurring_Amount__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Amount__c</fullName>
    <label>Recurring Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>