force-app/main/default/objects/Donation__c/fields/Recurring_Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Payment_Mode__c</fullName>
    <label>Recurring Payment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NetBanking</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>UPI</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Debit Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>