force-app/main/default/objects/Donation__c/fields/Required_80G__c.field-meta.xml
<CustomField>
    <fullName>Required_80G__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required 80G</label>
    <type>Checkbox</type>
</CustomField>