force-app/main/default/objects/Donation__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <defaultValue>&quot;pending&quot;</defaultValue>
    <label>status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>failed</fullName>
            </value>
            <value>
                <fullName>pending</fullName>
            </value>
            <value>
                <fullName>success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>