force-app/main/default/objects/Donation__c/fields/TR_NO__c.field-meta.xml
<CustomField>
    <fullName>TR_NO__c</fullName>
    <formula>TEXT(TR_Series__c) &amp; Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TR NO</label>
    <type>Text</type>
</CustomField>