force-app/main/default/objects/Donation__c/fields/TR_Series__c.field-meta.xml
<CustomField>
    <fullName>TR_Series__c</fullName>
    <label>TR Series</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NGO-2022</fullName>
            </value>
            <value>
                <fullName>ONG-2022-</fullName>
                <isActive>false</isActive>
                <label>ONG-2022-</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>