force-app/main/default/objects/Donation__c/fields/Transaction_Number__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Number__c</fullName>
    <label>Transaction Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>