force-app/main/default/objects/Donation__c/fields/Web_Entry_Id__c.field-meta.xml
<CustomField>
    <fullName>Web_Entry_Id__c</fullName>
    <label>Web Entry Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>