force-app/main/default/objects/Donation__c/validationRules/Mandate_Information_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandate_Information_required</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
				ISPICKVAL(Donation_Frequncy__c,&quot;Recurring&quot;), 
				ISBLANK(Donation_Amount__c)&amp;&amp;ISBLANK(Recurring_Amount__c)&amp;&amp;ISBLANK(Bank_Account_Number__c), 
				false
)</errorConditionFormula>
    <errorMessage>Mandate and Bank Information mandatory for recurring</errorMessage>
</ValidationRule>