force-app/main/default/objects/Donation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Donor__c</columns>
    <columns>Donation_Amount__c</columns>
    <columns>Date_of_Donation__c</columns>
    <columns>Payment_Mode__c</columns>
    <columns>TR_NO__c</columns>
    <columns>Required_80G__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>