force-app/main/default/objects/Donation__c/listViews/THIS_WEEK.listView-meta.xml
<ListView>
    <fullName>THIS_WEEK</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Donor__c</columns>
    <columns>Donation_Amount__c</columns>
    <columns>Date_of_Donation__c</columns>
    <columns>Payment_Mode__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_of_Donation__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>This Week</label>
</ListView>