force-app/main/default/objects/Donation__c/listViews/Today_s_Donations.listView-meta.xml
<ListView>
    <fullName>Today_s_Donations</fullName>
    <columns>NAME</columns>
    <columns>Date_of_Donation__c</columns>
    <columns>Donor__c</columns>
    <columns>Donation_Amount__c</columns>
    <columns>Payment_Mode__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_of_Donation__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today</label>
</ListView>